--- a/index.html
+++ b/index.html
@@ -270,21 +270,21 @@
           <div class="card-panel z-depth-5">
             <h4>Contact Us</h4>
             <div class="alert">Your message has been sent!</div>
-            <form id="contactForm">
+            <form id="contactForm" action="POST" data-netlify="true">
             <div class="input-field">
-              <input type="text" id="name" placeholder="Name" required>
+              <input type="text" id="name" name="name" placeholder="Name" required>
               <label for="name">Name</label>
             </div>
             <div class="input-field">
-              <input type="email" id="email" placeholder="Email" required>
+              <input type="email" id="email" name="email" placeholder="Email" required>
               <label for="email">Email</label>
             </div>
             <div class="input-field">
-              <input type="text" id="phone" placeholder="Phone Number" required>
+              <input type="text" id="phone" name="phone"placeholder="Phone Number" required>
               <label for="phone">Phone</label>
             </div>
             <div class="input-field">
-              <textarea class="materialize-textarea" id="message" placeholder="Message"></textarea>
+              <textarea class="materialize-textarea" id="message" name="message" placeholder="Message"></textarea>
               <label for="message">Message</label>
             </div>
             <input type="submit" value="Submit" class="btn blue-grey">
