--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   </section> 
 
       <!-- Section: About -->
-  <section id="" class="section section-about center scrollspy">
+<!-- <section id="" class="section section-about center scrollspy">
       <div class="container">
         <h2>We Want To Hear From You</h2>
         
@@ -257,7 +257,7 @@
       </div>
     </section>
 
-
+--> 
 
 <!-- Section: Contact -->
 <section id="contact" class="section section-contact center scrollspy">
