--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
   </section>
 
 
-  <section id="testimonials" class="section section-testimonials blue-grey darken-2  white-text center scrollspy">
+  <section id="testimonials" class="section section-testimonials   white-text center scrollspy">
     <div class="container">
-      <h2>Industry Experience</h2>
+      <h2 style="color: black; ">Industry Experience</h2>
       <div class="row">
           <div class="col s12 m12">
               <div class="card grey lighten-4 black-text z-depth-4">
