--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <!-- Section: About -->
   <section id="services" class="section section-about center scrollspy">
     <div class="container">
-      <h2>Innovative, Agile and Proven Track Record</h2>
+      <h2 class="blue-grey-text">Innovative, Agile and Proven Track Record</h2>
       <!--<p class="flow-text">We help you think outside of the box to achieve digital transformation. In today's world, technology is evoloving rapidly. DLG Consulting can help you keep up and make life easier through technology and automation.
        Why stick with legacy application and old workflows? There's plenty of technology out there that is simple and easy to use. We help your company develop, design, and train for the digital age by implementing the latest technologies to best fit your company's needs. 
       </p>-->
@@ -177,7 +177,7 @@
   <!-- Section: About -->
   <section id="about" class="section section-about center scrollspy">
     <div class="container">
-      <h2>About DLG Consulting</h2>
+      <h2 class="blue-grey-text">About DLG Consulting</h2>
       <p class="flow-text">We are a startup helping other startups and small-mid size companies create better workflows and more efficient technology. Each of DLG Consulting's employees have
         immense experience in consulting, technology and training!  </p>
       <div class="row">
@@ -220,7 +220,7 @@
 
   <section id="testimonials" class="section section-testimonials   white-text center scrollspy">
     <div class="container">
-      <h2 style="color: black; ">Industry Experience</h2>
+      <h2 class="blue-grey-text">Industry Experience</h2>
       <div class="row">
           <div class="col s12 m12">
               <div class="card grey lighten-4 black-text z-depth-4">
@@ -268,7 +268,7 @@
 
         <div id="forms"class="col s12 m6 offset-m3">
           <div class="card-panel z-depth-5">
-            <h4>Contact Us</h4>
+            <h4 class="blue-grey-text">Contact Us</h4>
             <div class="alert">Your message has been sent!</div>
             <form id="contactForm" action="POST" data-netlify="true">
             <div class="input-field">
@@ -298,45 +298,42 @@
 
 
   <!-- Footer -->
-  <footer class="page-footer blue-grey darken-1">
+  <footer class="page-footer ">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5>Location</h5>
-          <p>DLG Consulting</p>
-          <p>Miami, FL</p>
-          <p>Se habla Español!</p>
+          <h5 class="blue-grey-text">Location</h5>
+          <p class="blue-grey-text">DLG Consulting</p>
+          <p class="blue-grey-text">Miami, FL</p>
+          <p class="blue-grey-text">Se habla Español!</p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="blue-grey-text">Links</h5>
           <ul>
             <li>
-              <a class="white-text" href="#home">Home</a>
+              <a class="blue-grey-text" href="#home">Home</a>
             </li>
             <li>
-              <a class="white-text" href="#services">Services</a>
+              <a class="blue-grey-text" href="#services">Services</a>
             </li>
-            <li>
-                <li>
-                    <a class="white-text" href="services.html">Solutions</a>
-                  </li>
+           
                   <li>
-              <a class="white-text" href="#about">About</a>
+              <a class="blue-grey-text" href="#about">About</a>
             </li>
             <li>
-              <a class="white-text" href="#contact">Contact</a>
+              <a class="blue-grey-text" href="#contact">Contact</a>
             </li>
             <li>
-              <a style="color:white" href="https://www.youtube.com/channel/UCTOywtIvKKRyqfoJ1eRw9kA?">Videos</a>
+              <a class="blue-grey-text" href="https://www.youtube.com/channel/UCTOywtIvKKRyqfoJ1eRw9kA?">Videos</a>
             </li>
             <li>
-                <a class="white-text" href="https://www.linkedin.com/in/patrick-de-la-guardia-7564a395/">LinkedIn</a>
+                <a class="blue-grey-text" href="https://www.linkedin.com/in/patrick-de-la-guardia-7564a395/">LinkedIn</a>
               </li>
           </ul>
         </div>
       </div>
     </div>
-    <div class="footer-copyright blue-grey darken-4">
+    <div class="footer-copyright blue-grey darken-2">
       <div class="container">
         DLG Consulting © 2020
         <a class="grey-text text-lighten-4 right" href="#services">
